--- a/app/views/car_manufacturers/new.html.haml
+++ b/app/views/car_manufacturers/new.html.haml
@@ -1,5 +1,22 @@
-%h1 New car_manufacturer
+.page-title
+  %h3
+    New car manufacturer
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          Car manufacturer 
+          %span.semi-bold details
+        .tools
+          %a.collapse{href: "javascript:;"}
+          %a.config{"data-toggle" => "modal", href: "#grid-config"}
+          %a.reload{href: "javascript:;"}
+          %a.remove{href: "javascript:;"}
+      .grid-body.no-border
+        %br/
+        .row
+          .col-md-8.col-sm-8.col-xs-8
+            = render 'form'
 
-= render 'form'
-
-= link_to 'Back', car_manufacturers_path
+            = link_to 'Back', car_manufacturers_path
