--- a/app/views/car_models/_form.html.haml
+++ b/app/views/car_models/_form.html.haml
@@ -6,11 +6,11 @@
         - @car_model.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :car_manufacturer
-    = f.collection_select(:car_manufacturer_id, CarManufacturer.all, :id, :name)
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.label :name, :class => "form-label"
+    = f.text_field :name, :class => "form-control"
+  .form-group
+    = f.label :car_manufacturer, :class => "form-label"
+    = f.collection_select(:car_manufacturer_id, CarManufacturer.all, :id, :name, {}, , :class => "form-control")
+  .form-group
+    = f.submit 'Save', class: "btn btn-primary"
