--- a/app/views/car_types/_form.html.haml
+++ b/app/views/car_types/_form.html.haml
@@ -6,9 +6,9 @@
         - @car_type.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
+  .form-group
+    = f.label :name, :class => "form-label"
+    = f.text_field :name, :class => "form-control"
     
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.submit 'Save', class: "btn btn-primary"
