--- a/app/views/car_types/show.html.haml
+++ b/app/views/car_types/show.html.haml
@@ -1,9 +1,14 @@
-%p#notice= notice
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h3
+          Car type
+      .grid-body.no-border
+        %p
+          %b Type:
+          = @car_type.name
 
-%p
-  %b Type:
-  = @car_type.name
-
-= link_to 'Edit', edit_car_type_path(@car_type)
-\|
-= link_to 'Back', car_types_path
+        = link_to 'Edit', edit_car_type_path(@car_type)
+        \|
+        = link_to 'Back', car_types_path
