--- a/app/views/cars/_form.html.haml
+++ b/app/views/cars/_form.html.haml
@@ -58,11 +58,11 @@
 
   %h3 Alarms
   .form-group
-    = f.select :alarm_ids, Alarm.all.collect {|x| [x.name, x.id]}, {}, :multiple => true
+    = f.select :alarm_ids, Alarm.all.collect {|x| [x.name, x.id]}, {}, :multiple => true, class: "form-control"
 
   %h3 Work Schedule
   .form-group
-    = f.collection_select(:work_schedule_id, WorkSchedule.all, :id, :name, class: "form-control")
+    = f.collection_select(:work_schedule_id, WorkSchedule.all, :id, :name, {}, class: "form-control")
 
   .form-group
     = f.submit 'Save', class: "btn btn-primary"
