--- a/app/views/device_models/_form.html.haml
+++ b/app/views/device_models/_form.html.haml
@@ -6,14 +6,17 @@
         - @device_model.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :device_manufacturer
-    = f.collection_select(:device_manufacturer_id, DeviceManufacturer.all, :id, :name)
-  .field
-    = f.label :protocol
-    = f.text_field :protocol
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.label :name, class: "form-label"
+    = f.text_field :name, class: "form-control"
+
+  .form-group
+    = f.label :device_manufacturer, class: "form-label"
+    = f.collection_select(:device_manufacturer_id, DeviceManufacturer.all, :id, :name, {}, class: "form-control")
+
+  .form-group
+    = f.label :protocol, class: "form-label"
+    = f.text_field :protocol, class: "form-control"
+
+  .form-group
+    = f.submit 'Save', class: "btn btn-primary"
