--- a/app/views/device_models/edit.html.haml
+++ b/app/views/device_models/edit.html.haml
@@ -1,7 +1,24 @@
-%h1 Editing device_model
+.page-title
+  %h3
+    Editing device model
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          Device model 
+          %span.semi-bold details
+        .tools
+          %a.collapse{href: "javascript:;"}
+          %a.config{"data-toggle" => "modal", href: "#grid-config"}
+          %a.reload{href: "javascript:;"}
+          %a.remove{href: "javascript:;"}
+      .grid-body.no-border
+        %br/
+        .row
+          .col-md-8.col-sm-8.col-xs-8
+            = render 'form'
 
-= render 'form'
-
-= link_to 'Show', @device_model
-\|
-= link_to 'Back', device_models_path
+            = link_to 'Show', @device_model
+            \|
+            = link_to 'Back', device_models_path
