--- a/app/views/device_models/show.html.haml
+++ b/app/views/device_models/show.html.haml
@@ -1,15 +1,20 @@
-%p#notice= notice
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h3
+          Device model
+      .grid-body.no-border
+        %p
+          %b Name:
+          = @device_model.name
+        %p
+          %b Device manufacturer:
+          = @device_model.device_manufacturer_id
+        %p
+          %b Protocol:
+          = @device_model.protocol
 
-%p
-  %b Name:
-  = @device_model.name
-%p
-  %b Device manufacturer:
-  = @device_model.device_manufacturer_id
-%p
-  %b Protocol:
-  = @device_model.protocol
-
-= link_to 'Edit', edit_device_model_path(@device_model)
-\|
-= link_to 'Back', device_models_path
+        = link_to 'Edit', edit_device_model_path(@device_model)
+        \|
+        = link_to 'Back', device_models_path
