--- a/app/views/devices/_form.html.haml
+++ b/app/views/devices/_form.html.haml
@@ -6,35 +6,35 @@
         - @device.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :emei
-    = f.text_field :emei
-  .field
-    = f.label :cost_price
-    = f.text_field :cost_price
-  .field
-    = f.label :device_model
-    = f.collection_select(:device_model_id, DeviceModel.all, :id, :name)
-  .field
-    = f.label :device_type
-    = f.collection_select(:device_type_id, DeviceType.all, :id, :name)
+  .form-group
+    = f.label :name, class: "form-label"
+    = f.text_field :name, class: "form-control"
+  .form-group
+    = f.label :emei, class: "form-label"
+    = f.text_field :emei, class: "form-control"
+  .form-group
+    = f.label :cost_price, class: "form-label"
+    = f.text_field :cost_price, class: "form-control"
+  .form-group
+    = f.label :device_model, class: "form-label"
+    = f.collection_select(:device_model_id, DeviceModel.all, :id, :name, {}, class: "form-control" )
+  .form-group
+    = f.label :device_type, class: "form-label"
+    = f.collection_select(:device_type_id, DeviceType.all, :id, :name, {}, class: "form-control" )
 
-  .field
-    = f.label :car
+  .form-group
+    = f.label :car, class: "form-label"
     - if @device.has_car?
-      = f.collection_select(:car_id, Car.cars_without_devices(@device.car_id), :id, :name )
+      = f.collection_select(:car_id, Car.cars_without_devices(@device.car_id), :id, :name, {}, class: "form-control" )
     - else 
       - if Car.cars_without_devices(nil).count != 0 
-        = f.collection_select(:car_id, Car.cars_without_devices(nil), :id, :name, :include_blank => "Pick a car" )
+        = f.collection_select(:car_id, Car.cars_without_devices(nil), :id, :name, { :include_blank => "Pick a car" } , class: "form-control" )
       - else
-        = f.collection_select(:car_id, Car.cars_without_devices(nil), :id, :name, :include_blank => "No cars available at this moment" )
+        = f.collection_select(:car_id, Car.cars_without_devices(nil), :id, :name, { :include_blank => "No cars available at this moment" }, class: "form-control" )
       
      
-  .field
-    = f.label :simcard
+  .form-group
+    = f.label :simcard, class: "form-label"
     - if @device.has_simcard?
       = list_simcards_with_default(@device.simcard)
     - else
@@ -43,5 +43,5 @@
       - else 
         = list_available_simcards
 
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.submit 'Save', class: "btn btn-primary"
