--- a/app/views/parameters/_form.html.haml
+++ b/app/views/parameters/_form.html.haml
@@ -6,14 +6,14 @@
         - @parameter.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :type
-    = f.text_field :type
-  .field
-    = f.label :rule_id
-    = f.number_field :rule_id
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.label :name, class: "form-label"
+    = f.text_field :name, class: "form-control"
+  .form-group
+    = f.label :type, class: "form-label"
+    = f.text_field :type, class: "form-control"
+  .form-group
+    = f.label :rule_id, class: "form-label"
+    = f.number_field :rule_id, class: "form-control"
+  .form-group
+    = f.submit 'Save', class: "btn btn-primary"
