--- a/app/views/plan_types/show.html.haml
+++ b/app/views/plan_types/show.html.haml
@@ -1,9 +1,14 @@
-%p#notice= notice
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h3
+          Plan type
+      .grid-body.no-border
+        %p
+          %b Name:
+          = @plan_type.name
 
-%p
-  %b Name:
-  = @plan_type.name
-
-= link_to 'Edit', edit_plan_type_path(@plan_type)
-\|
-= link_to 'Back', plan_types_path
+        = link_to 'Edit', edit_plan_type_path(@plan_type)
+        \|
+        = link_to 'Back', plan_types_path
