--- a/app/views/rules/show.html.haml
+++ b/app/views/rules/show.html.haml
@@ -1,19 +1,28 @@
-%p#notice= notice
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h3
+          Rule
+          %span.semi-bold= @rule.name
+      .grid-body.no-border
+        %p
+          %b Name:
+          = @rule.name
+        %p
+          %b Method name:
+          = @rule.method_name
 
-%p
-    %b Name:
-    = @rule.name
-%p
-    %b Method name:
-    = @rule.method_name
-
-%b Parmeters :
-%p
-    %ul
-        - @rule.parameters.each do |param|
-            %li= "#{param.name} (#{param.data_type})"
+        %b Parmeters :
+        %p
+          %ul
+            - if @rule.parameters.size == 0 
+              No parameters
+            - else 
+              - @rule.parameters.each do |param|
+                %li= "#{param.name} (#{param.data_type})"
 
 
-= link_to 'Edit', edit_rule_path(@rule)
-\|
-= link_to 'Back', rules_path
+        = link_to 'Edit', edit_rule_path(@rule)
+        \|
+        = link_to 'Back', rules_path
