--- a/app/views/simcards/_form.html.haml
+++ b/app/views/simcards/_form.html.haml
@@ -6,25 +6,25 @@
         - @simcard.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :telephone_number
-    = f.text_field :telephone_number
-  .field
-    = f.label :teleprovider
-    = f.collection_select(:teleprovider_id, Teleprovider.all, :id, :name)
-  .field
-    = f.label :monthly_price
-    = f.text_field :monthly_price
+  .form-group
+    = f.label :telephone_number, :class => "form-label"
+    = f.text_field :telephone_number, :class => "form-control"
+  .form-group
+    = f.label :teleprovider, :class => "form-label"
+    = f.collection_select(:teleprovider_id, Teleprovider.all, :id, :name, {}, :class => "form-control")
+  .form-group
+    = f.label :monthly_price, :class => "form-label"
+    = f.text_field :monthly_price, :class => "form-control"
   
-  .field
-    = f.label :device
+  .form-group
+    = f.label :device, :class => "form-label"
     - if @simcard.device.nil?
       - if Device.devices_without_simcards(nil).count != 0 
-        = f.collection_select(:device_id, Device.devices_without_simcards(nil), :id, :name, :include_blank => "Pick a device" )
+        = f.collection_select(:device_id, Device.devices_without_simcards(nil), :id, :name, { :include_blank => "Pick a device" } , :class => "form-control"  )
       - else
-        = f.collection_select(:device_id, Device.devices_without_simcards(nil), :id, :name, :include_blank => "No devices available at this moment" )
+        = f.collection_select(:device_id, Device.devices_without_simcards(nil), :id, :name, { :include_blank => "No devices available at this moment" }, :class => "form-control")
     - else 
-      = f.collection_select(:device_id, Device.devices_without_simcards(@simcard.device_id), :id, :name)
+      = f.collection_select(:device_id, Device.devices_without_simcards(@simcard.device_id), :id, :name, {} , :class => "form-control")
 
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.submit 'Save', class: "btn btn-primary"
