--- a/app/views/teleproviders/_form.html.haml
+++ b/app/views/teleproviders/_form.html.haml
@@ -6,11 +6,11 @@
         - @teleprovider.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :apn
-    = f.text_field :apn
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.label :name, :class => "form-label"
+    = f.text_field :name, :class => "form-control"
+  .form-group
+    = f.label :apn, :class => "form-label"
+    = f.text_field :apn, :class => "form-control"
+  .form-group
+    = f.submit 'Save', class: "btn btn-primary"
