--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,12 +1,12 @@
 .page-title
   %h3
-    New group
+    New user
 .row
   .col-md-12
     .grid.simple
       .grid-title.no-border
         %h4
-          Group 
+          User 
           %span.semi-bold details
         .tools
           %a.collapse{href: "javascript:;"}
@@ -18,5 +18,4 @@
         .row
           .col-md-8.col-sm-8.col-xs-8
             = render 'form'
-
-            = link_to 'Back', groups_path
+            = link_to 'Back', users_path
