--- a/app/views/work_schedules/_form.html.haml
+++ b/app/views/work_schedules/_form.html.haml
@@ -6,11 +6,13 @@
         - @work_schedule.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :car_id
-    = f.number_field :car_id
-  .field
-    = f.label :name
-    = f.text_field :name
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.label :car_id, :class => "form-label"
+    = f.number_field :car_id, :class => "form-control"
+
+  .form-group
+    = f.label :name, :class => "form-label", :class => "form-label"
+    = f.text_field :name, :class => "form-control"
+
+  .form-group
+    = f.submit 'Save', class: "btn btn-primary"
