--- a/app/views/device_manufacturers/_form.html.haml
+++ b/app/views/device_manufacturers/_form.html.haml
@@ -6,8 +6,9 @@
         - @device_manufacturer.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.label :name, class: "form-label"
+    = f.text_field :name, class: "form-control"
+
+  .form-group
+    = f.submit 'Save', class: "btn btn-primary"
