--- a/app/views/device_manufacturers/new.html.haml
+++ b/app/views/device_manufacturers/new.html.haml
@@ -1,14 +1,12 @@
-%h1 New device_manufacturer
-
 .page-title
   %h3
-    Add car
+    Add Device manufacturer
 .row
   .col-md-12
     .grid.simple
       .grid-title.no-border
         %h4
-          Car 
+          Device manufacturer  
           %span.semi-bold details
         .tools
           %a.collapse{href: "javascript:;"}
