--- a/app/views/invitations/new.html.haml
+++ b/app/views/invitations/new.html.haml
@@ -22,14 +22,14 @@
               
               .form-group
                 = f.label "Firstname", class: "form-label"
-                = text_field_tag 'first_name', nil,  class: "form-label"
+                = text_field_tag 'first_name', nil,  class: "form-control"
               .form-group
                 = f.label "Lastname", class: "form-label"
-                = text_field_tag 'last_name', nil, class: "form-label"
+                = text_field_tag 'last_name', nil, class: "form-control"
               - resource.class.invite_key_fields.each do |field|
                 .form-group
                   = f.label field, class: "form-label"
-                  = f.text_field field, class: "form-label"
+                  = f.text_field field, class: "form-control"
               .form-group
                 = f.label "Role", class: "form-label"
                 = radio_button_tag 'default_role', 'Driver', true
