added filtering car map view by date & time

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,6 +37,8 @@
  *= require self
  *= require regions
  *= require work_schedules
+ *= require jquery.ui.datepicker
+ *= require jquery.timepicker.css
  */
 
 .custom_marker_content {
