--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,3 +4,5 @@
     .row.tiles-container.tiles.white.hidden-xlg.m-b-20
       %div
         %div#cars_index{ :style => "width: 100%; height: 400px;"}
+
+= @time.inspect
