removed simulate random cars from whenever.rb

--- a/app/views/cars/show.html.haml
+++ b/app/views/cars/show.html.haml
@@ -83,7 +83,7 @@
             %thead
               %tr
                 %th Latitude, Longitude
-                %th Time
+                %th Date
             %tbody
               
               - @positions.each do |position|
