--- a/app/views/cars/show.html.haml
+++ b/app/views/cars/show.html.haml
@@ -9,12 +9,12 @@
         = form_tag '', :method => :get, :id => "filter_by_date" do
           .form-group
             = text_field_tag "scope[start_date]", params.try(:[], :scope).try(:[], :start_date), class: "date"
-            = text_field_tag "scope[start_time]", params.try(:[], :scope).try(:[], :start_time), class: "time"
+            = text_field_tag "scope[start_time]", params.try(:[], :scope).try(:[], :start_time), class: "time start_time"
           .form-group
             To
           .form-group
             = text_field_tag "scope[end_date]", params.try(:[], :scope).try(:[], :end_date), class: "date"
-            = text_field_tag "scope[end_time]", params.try(:[], :scope).try(:[], :end_time) , class: "time"
+            = text_field_tag "scope[end_time]", params.try(:[], :scope).try(:[], :end_time) , class: "time end_time"
           .form-group
             Number of results
           .form-group
@@ -83,12 +83,14 @@
             %thead
               %tr
                 %th Latitude, Longitude
+                %th Address
                 %th Date
             %tbody
               
               - @positions.each do |position|
                 %tr
-                  %td= "#{position[:latitude]},#{position[:longitude]}"
+                  %td= "#{position.latitude},#{position.longitude}"
+                  %td= position.try(:location).try(:address)
                   %td= position[:time]
                  
                 
