refactored subscriptions, cleaned up few methods in other models

--- a/app/views/devices/show.html.haml
+++ b/app/views/devices/show.html.haml
@@ -6,10 +6,10 @@
           = Device
           %span.semi-bold= @device.name
       .grid-body.no-border
-        %p
+        .form-group
           %b Emei:
           = @device.emei
-        %p
+        .form-group
           %b Cost price:
           = @device.cost_price
 
