--- a/app/assets/javascripts/cars.js.coffee.erb
+++ b/app/assets/javascripts/cars.js.coffee.erb
@@ -2,12 +2,12 @@
 # All this logic will automatically be available in application.js.
 # You can use CoffeeScript in this file: http://coffeescript.org/
 
-
 $(document).ready ->
 
     $('.page-sidebar').css('height',$('.page-content').css('height'))
 
     if (typeof gon != "undefined") && gon.resource == "cars" 
+        console.log gon
 
         class CustomMarkerBuilder extends Gmaps.Google.Builders.Marker
           create_marker: ->
@@ -35,8 +35,6 @@ $(document).ready ->
             boxStyle:
               width: "130px"
 
-
-        
 
         if gon.map_id == "cars_show"
 
