--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,28 @@
 %h1 Live map of vehicles
 .row
-  .col-md-12
+  .col-md-8
     .row.tiles-container.tiles.white.hidden-xlg.m-b-20
       %div
         %div#cars_index{ :style => "width: 100%; height: 400px;"}
+  .col-md-4
+    .grid.simple
+      .grid-body.no-border
+        %table.table.no-more-tables
+          %thead
+            %tr
+              %th
+              %th
+              %th
+
+          %tbody
+            
+            - @positions.each do |position|
+              %tr
+                %td
+                  = link_to "Vehicle ##{position.car.numberplate}", position.car
+                  %br
+                  = position.time
+                  %br
+                  = position.location.address
+
 
