--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -250,6 +250,7 @@
 					<li>
 						<a href="javascript:;"><span class="title">Billing</span><span class="arrow "></span></a>
 						<ul class="sub-menu">
+							<li><%= link_to "Plans", plans_path %></li>
 							<li><%= link_to "Plan types", plan_types_path %></li>
 	                		<li><%= link_to "Features", features_path %></li>
 						</ul>
