--- a/app/assets/javascripts/cars.js.coffee.erb
+++ b/app/assets/javascripts/cars.js.coffee.erb
@@ -7,7 +7,7 @@ $(document).ready ->
     $('.page-sidebar').css('height',$('.page-content').css('height'))
 
     if (typeof gon != "undefined") && gon.resource == "cars" 
-        console.log gon
+        #console.log gon
 
         class CustomMarkerBuilder extends Gmaps.Google.Builders.Marker
           create_marker: ->
@@ -39,8 +39,8 @@ $(document).ready ->
         if gon.map_id == "cars_show"
 
             $('#filter_by_date .time').timepicker({
-            'showDuration': true,
-            'timeFormat': 'H:i',
+                'showDuration': true,
+                'timeFormat': 'H:i',
             });
 
             date = new Date();
@@ -64,12 +64,14 @@ $(document).ready ->
             handler.buildMap { internal: id: gon.map_id }, ->
                 #markers = handler.addMarkers(gon.data)
 
+                console.log gon.data
+
                 for one_marker, i in gon.data
 
                     if i == 0 
-                        pin = "<img width='36px' height='36px' src='http://www.clker.com/cliparts/W/0/g/a/W/E/map-pin-red-md.png'>"
+                        pin = "<img width='36px' height='36px' src='<%= image_path('red_pin.png') %>'>"
                     else if gon.data.length - 1 == i
-                        pin = "<img width='36px' height='36px' src='http://www.clker.com/cliparts/G/e/o/0/f/m/map-pin-red-hi.png'>"
+                        pin = "<img width='36px' height='36px' src='<%= image_path('green_pin.png') %>'>"
                     else
                         pin = "<img width='36px' height='36px' src='<%= image_path('yellow_pin.png') %>'>"
 
@@ -92,7 +94,7 @@ $(document).ready ->
 
                 for one_marker, i in gon.data
 
-                    pin = "<img width='36px' height='36px' src='http://www.clker.com/cliparts/W/0/g/a/W/E/map-pin-red-md.png'>"
+                    pin = "<img width='36px' height='36px' src='<%= image_path('red_pin.png') %>'>"
                     content = "<div style='height:100%;'>" + one_marker.infowindow + "</div>"
                     
                     marker = handler.addMarker
