added try to home#index view

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -23,6 +23,6 @@
                   %br
                   = position.time
                   %br
-                  = position.location.address
+                  = position.try(:location).try(:address)
 
 
