--- a/app/assets/javascripts/cars.js.coffee.erb
+++ b/app/assets/javascripts/cars.js.coffee.erb
@@ -46,8 +46,8 @@ $(document).ready ->
             date = new Date();
             date.setHours(6,0,0,0);
 
-            #$('#filter_by_date .start_time').timepicker('setTime', date);
-            #$('#filter_by_date .end_time').timepicker('setTime', new Date());
+            $('#filter_by_date .start_time').timepicker('setTime', date);
+            $('#filter_by_date .end_time').timepicker('setTime', new Date());
 
 
             $('#filter_by_date .date').datepicker({
@@ -55,7 +55,7 @@ $(document).ready ->
                 'autoclose': true
             });
 
-            #$('#filter_by_date .date').datepicker('setDate', new Date())
+            $('#filter_by_date .date').datepicker('setDate', new Date())
 
             basicExampleEl = document.getElementById('filter_by_date');
             datepair = new Datepair(basicExampleEl);
